--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -168,9 +168,10 @@ jobs:
           name: Back-end Scan with force fix
           command: |
             cd backend
-            npm audit fix --audit-level=critical --force
-            npm install --save-dev webpack@5.74.0
-            npm update mkdirp --depth 2
+            npm install
+            #npm audit fix --audit-level=critical --force
+            #npm install --save-dev webpack@5.74.0
+            #npm update mkdirp --depth 2
             npm audit --audit-level=critical
 
   deploy-infrastructure:
