--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -170,8 +170,8 @@ jobs:
             cd backend
             npm install
             npm audit fix --audit-level=critical --force
-            #npm install --save-dev webpack@5.74.0
-            #npm update mkdirp --depth 2
+            npm install --save-dev webpack@5.74.0
+            npm update mkdirp --depth 2
             npm audit --audit-level=critical
 
   deploy-infrastructure:
