--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -457,39 +457,39 @@ workflows:
           requires: [test-frontend, test-backend, scan-frontend, scan-backend]
           filters:
             branches:
-              only: [main]
+              only: [master]
       - configure-infrastructure:
           requires: [deploy-infrastructure]
           filters:
             branches:
-              only: [main]
+              only: [master]
       - run-migrations:
           requires: [configure-infrastructure]
           filters:
             branches:
-              only: [main]
+              only: [master]
       - deploy-frontend:
           requires: [run-migrations]
           filters:
             branches:
-              only: [main]
+              only: [master]
       - deploy-backend:
           requires: [run-migrations]
           filters:
             branches:
-              only: [main]
+              only: [master]
       - smoke-test:
           requires: [deploy-backend, deploy-frontend]
           filters:
             branches:
-              only: [main]
+              only: [master]
       - cloudfront-update:
           requires: [smoke-test]
           filters:
             branches:
-              only: [main]
+              only: [master]
       - cleanup:
           requires: [cloudfront-update]
           filters:
             branches:
-              only: [main]
+              only: [master]
