--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ commands:
           when: on_fail
           command: |
             aws cloudformation delete-stack --stack-name UdaPeople-Backend-${CIRCLE_WORKFLOW_ID:0:8}
-            aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:8} --recursive
+            aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:8}" --recursive
             aws cloudformation delete-stack --stack-name UdaPeople-Frontend-${CIRCLE_WORKFLOW_ID:0:8}
 
   revert-migrations:
