--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -372,7 +372,7 @@ jobs:
           name: Smoke Test Backend
           command: |
             API_URL=$(aws ssm get-parameter --name udapeople_API_URL_${CIRCLE_WORKFLOW_ID:0:8} --query 'Parameter.Value' --output text)
-            curl ${API_URL}
+            echo ${API_URL}
             if curl -s "${API_URL}/api/status" | grep "ok"
               then
                 return 0
