--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -375,9 +375,9 @@ jobs:
             echo ${API_URL}
             if curl -s "${API_URL}/api/status" | grep "ok"
               then
-                return 0
+                exit 0
               else
-                return 1
+                exit 1
             fi
       - run:
           name: Smoke Test Frontend
@@ -385,9 +385,9 @@ jobs:
             FRONTEND_URL=$(aws ssm get-parameter --name udapeople_FRONTEND_URL_${CIRCLE_WORKFLOW_ID:0:8} --query 'Parameter.Value' --output text)
             if curl -s ${FRONTEND_URL} | grep "Welcome"
               then
-                return 0
+                exit 0
               else
-                return 1
+                exit 1
             fi
       - destroy-environment
       - revert-migrations
