--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,7 @@ commands:
             aws cloudformation delete-stack --stack-name UdaPeople-Backend-${CIRCLE_WORKFLOW_ID:0:8}
             aws s3 rm "s3://udapeople-${CIRCLE_WORKFLOW_ID:0:8}" --recursive
             aws cloudformation delete-stack --stack-name UdaPeople-Frontend-${CIRCLE_WORKFLOW_ID:0:8}
+            aws ssm delete-parameters --names BACKEND_URL_${CIRCLE_WORKFLOW_ID:0:8} udapeople_API_URL_${CIRCLE_WORKFLOW_ID:0:8} udapeople_FRONTEND_URL_${CIRCLE_WORKFLOW_ID:0:8} 
 
   revert-migrations:
     description: Revert the last migration if successfully run in the current workflow.
@@ -24,13 +25,12 @@ commands:
             # get migration status from AWS SSM Parameter store
             MIGRATION_STATUS=$(aws ssm get-parameter --name udapeople_migration_${CIRCLE_WORKFLOW_ID:0:8} --query 'Parameter.Value' --output text)
 
-            if [ $MIGRATION_STATUS == 'FAIL' ]
+            if [ $MIGRATION_STATUS == 'SUCCESS' ]
               then
-                echo "Migration FAILED, Revert Migration"
+                echo "Revert Migration"
                 cd ~/project/backend
                 npm install
                 npm run migrations:revert
-                exit 1
             fi
 
 jobs:
@@ -227,7 +227,7 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - "59:9f:6a:0a:42:f6:b0:ec:b6:d7:ff:fb:da:ca:1c:ca"
+            - "95:6e:04:4f:99:50:5d:05:21:dd:b5:60:d5:6b:cc:1a"
       - attach_workspace:
           at: ~/project
       - run:
@@ -346,7 +346,7 @@ jobs:
       - checkout
       - add_ssh_keys:
           fingerprints:
-            - "59:9f:6a:0a:42:f6:b0:ec:b6:d7:ff:fb:da:ca:1c:ca"
+            - "95:6e:04:4f:99:50:5d:05:21:dd:b5:60:d5:6b:cc:1a"
       - attach_workspace:
           at: ~/project
       - run:
@@ -402,6 +402,17 @@ jobs:
           command: |
             yum install -y tar gzip git curl wget
       - run:
+          name: Update OldWorkflowID Vaule
+          command: |
+            # Fetch the Old workflow ID
+            export OldWorkflowID=$(aws cloudformation \
+                    list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
+                    --no-paginate --output text)
+            echo OldWorkflowID: "${OldWorkflowID}"
+            aws ssm put-parameter --name udapeople_OldWorkflowID --type "String" --tier Standard --value "${OldWorkflowID}" --overwrite
+            echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:8}"
+
+      - run:
           name: Update cloudfront distribution
           command: |
             aws cloudformation deploy \
@@ -420,11 +431,10 @@ jobs:
             name: Get old stack workflow id
             command: |
               # Fetch the Old workflow ID
-              export OldWorkflowID=$(aws cloudformation \
-              list-exports --query "Exports[?Name==\`WorkflowID\`].Value" \
-              --no-paginate --output text)
+              export OldWorkflowID=$(aws ssm get-parameter --name udapeople_OldWorkflowID --query 'Parameter.Value' --output text)
               echo OldWorkflowID: "${OldWorkflowID}"
               echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
+              
               # Fetch the stack names          
               export STACKS=($(aws cloudformation list-stacks --query "StackSummaries[*].StackName" \
                       --stack-status-filter CREATE_COMPLETE --no-paginate --output text)) 
