--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -455,8 +455,11 @@ jobs:
         - run:
             name: Remove old stacks and files
             command: |
+              echo OldWorkflowID: "${OldWorkflowID}"
+              echo CIRCLE_WORKFLOW_ID "${CIRCLE_WORKFLOW_ID:0:7}"
               if [[ "${STACKS[@]}" =~ "${OldWorkflowID}" ]]
               then
+                echo "s3://udapeople-${OldWorkflowID}"
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
