--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -456,6 +456,7 @@ jobs:
                 aws s3 rm "s3://udapeople-${OldWorkflowID}" --recursive
                 aws cloudformation delete-stack --stack-name "udapeople-backend-${OldWorkflowID}"
                 aws cloudformation delete-stack --stack-name "udapeople-frontend-${OldWorkflowID}"
+                aws ssm delete-parameters --names BACKEND_URL_${OldWorkflowID} udapeople_API_URL_${OldWorkflowID} udapeople_FRONTEND_URL_${OldWorkflowID}
               fi
 
 workflows:
